hphp/test/slow/namespace/dynamic_extra_slash_cns2.php.expectf

Fatal error: Undefined constant 'A\B' in %s/test/slow/namespace/dynamic_extra_slash_cns2.php on line 9
